Refactor CORS configuration and environment variable management for backend and frontend integration